fix broken style

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -637,12 +637,14 @@ GROUPS
       }
     }
   }
-  section {
+  .group-detail-section {
     float         : left;
     border-radius : 3px;
-    width         : 711px;
+    width         : 777px;
+    padding       : 16px;
     border        : $border-secondary;
     border-bottom : $border-primary;
+    margin-bottom : 16px;
     .members-list {
       padding: 16px;
       .member {
@@ -662,6 +664,106 @@ GROUPS
           font-size : 16px;
           color     : $red-primary;
         }
+      }
+    }
+  }
+}
+/****************
+EVENTS
+****************/
+.event-index {
+  .event-index-item {
+    padding    : 16px;
+    width      : 100%;
+    border-top : $border-primary;
+    &:last-child {
+      border-bottom: $border-primary;
+    }
+    h2 {
+      cursor : pointer;
+      color  : rgba(0,0,0,.87);
+      float  : left;
+      &:hover {
+        color: $red-primary;
+      }
+    }
+    .event-header {
+      .admin-options {
+        position : relative;
+        float    : right;
+        width    : 50px;
+        height   : 21px;
+        .top-pencil {
+          cursor    : pointer;
+          opacity   : 1;
+          position  : absolute;
+          left      : 15px;
+          padding   : 5px;
+          transform : rotate(0deg);
+          &:hover {
+            transform  : rotate(360deg);
+            opacity    : .2;
+            transition : 1s;
+          }
+          &.hide {
+            display: none;
+          }
+        }
+        .admin-edit {
+          text-align : center;
+          width      : 743px;
+          left       : -677px;
+          top        : -16px;
+          height     : 96px;
+          color      : #FFF;
+          background : rgba(0, 0, 0, .8);
+          position   : absolute;
+        }
+        .fa-times-circle-o {
+          float        : right;
+          margin-top   : 5px;
+          margin-right : 5px;
+          cursor       : pointer;
+        }
+        .options {
+          cursor: pointer;
+          margin-top : 30px;
+          width      :  60px;
+          display    : inline-block;
+          &:first-of-type:hover {
+            color      : #0C0;
+            transition : 1s;
+          }
+          &:last-of-type:hover {
+            color      : #F00;
+            transition : 1s;
+          }
+        }
+      }
+    }
+    .event-body {
+      width: 575px;
+      float: left;
+      p {
+        word-break: break-all;
+      }
+      .learn {
+        font-size : 13px;
+        color     : $red-primary;
+        cursor    : pointer;
+        &:hover { text-decoration: underline; }
+      }
+    }
+    .event-time {
+      float     : left;
+      font-size : 16px;
+      h3 {
+        font-weight : 400;
+        color       : #333;
+      }
+      h4 {
+        font-size   : 13px;
+        line-height : 1.45;
       }
     }
   }
